samples/_failures_safe/1761412473_ea8d10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2ffca1a.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_d2ffca1a.c:185:23: error: expected declaration or statement at end of input
  185 | void graph_bfs(struct Graph* graph, int start_id) {
      |                       ^~~~~
